# agentj

./: .gitignore  .npmrc  AGENTS.md  CHANGELOG.md  LICENSE  README.md  TODOS_1.md  TODOS_2.md  agentj-layout-mockup.html  agentj-session-mockup.html  agentj-simplification.html  agentj-subagent-viz-mockup.html  biome.json  bunfig.toml  package.json  tsconfig.base.json  tsconfig.json
.changeset/: agent-skills.md  authoritative-mode-prompts.md  auto-smart-compact.md  background-tool-names.md  bash-abort-signal.md  biome-quality.md  bouncing-spinner.md  bound-tool-output.md  bright-jobs-guide.md  bright-luna-benchmark.md  bright-updates.md  build-command-feedback.md  calm-luna-reports.md  canonical-worktree-paths.md  chained-slash-completion.md  chat-first-rewrite.md  checking-your-work-reflection.md  chronological-transcript-spacing.md  clear-background-status-markers.md  clear-context.md  clear-todo-activity.md  clearer-question-choices.md  config-browser.md  config-field-layer.md  config-tui.md  continue-open-todos.md  cost-dashboard.md  cost-optimization.md  editor-inline-completion.md  embedded-browser-skills.md  fix-background-job-finalization-warnings.md  fix-delegated-job-failures.md  float-live-region.md  fluid-calm-busy.md  fuzzy-mcp-search.md  grounded-completions.md  initial-release.md  initial-v0.1.md  interactive-update-notice.md  job-soft-timeout.md  (+92 more)
agentj-desktop/: .gitignore  index.html  (+2 more)
agentj-desktop/src-tauri/: Cargo.toml  tauri.conf.json
agentj-desktop/src-tauri/capabilities/: default.json
agentj-desktop/src-tauri/src/: main.rs  worktree.rs
(+509 files in other folders)
