[package]
name = "agentj-desktop"
version = "0.1.0"
edition = "2021"
description = "agentj desktop — a Tauri + React front-end that embeds the agentj agent loop."
license = "MIT"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["sync", "rt", "macros"] }
# The product crate, linked as a library (agentj-rs exposes a [lib] named `agentj`). This is what
# lets the desktop backend run the REAL agent loop in-process instead of shelling out to the CLI.
agentj = { path = "../../agentj-rs" }

[features]
# Tauri's custom-protocol is used in release builds; dev serves from the Vite dev server.
custom-protocol = ["tauri/custom-protocol"]
